migraciones para las tablas de catalogos y usuarios, controladores y modelos de las tablas nuevas y documentacion de swagger
